# bevy

./: .gitignore  CREDITS.md  Cargo.toml  search-index.js  todo.txt
.github/workflows/: ci.yml
assets/: ao.gltf
assets/models/: solari_cube_ico.glb  solari_monkey.glb
assets/shaders/: custom_material.wgsl  custom_vertex_attribute.wgsl  instancing.wgsl  show_depth.wgsl
bevy/: all.html
bevy/app/: struct.App.html
bevy/asset/: enum.HandleId.html  struct.AssetPath.html  struct.AssetPathId.html  struct.AssetServer.html  struct.Error.html  struct.Handle.html  struct.SourcePathId.html  trait.AddAsset.html
bevy/audio/: trait.Sample.html  trait.Source.html
bevy/core/: struct.Name.html
bevy/gltf/: enum.GltfError.html
bevy/math/: index.html  struct.Affine3.html  struct.Affine3A.html  struct.Vec3.html
bevy/pbr/: fn.queue_material_meshes.html  fn.queue_prepass_material_meshes.html  index.html  sidebar-items.js  struct.MeshTransforms.html  struct.MeshUniform.html  struct.PreviousGlobalTransform.html  struct.StandardMaterial.html
bevy/prelude/: enum.Color.html  enum.Visibility.html  struct.AnyOf.html  struct.App.html  struct.AssetServer.html  struct.GlobalTransform.html  struct.GridTrack.html  struct.Handle.html  struct.Local.html  struct.Mesh.html  (+14 more)
crates/bevy_fsr/: Cargo.toml  build.rs
crates/bevy_fsr/include/: bindgen.h  wrapper.h
crates/bevy_fsr/include/FidelityFX/host/: ffx_fsr2.h  ffx_interface.h
crates/bevy_fsr/lib/: ffx_fsr2_x64.lib  ffx_fsr2_x64d.lib
crates/bevy_fsr/src/: fsr.rs  lib.rs
docs/: cargo_features.md
examples/: README.md
(+369 files in other folders)
