[package]
name = "bevy_fsr"
version = "0.12.0-dev"
edition = "2021"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "Provides AMD FidelityFX™ Super Resolution for Bevy Engine."
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
# bevy_app = { path = "../bevy_app", version = "0.12.0-dev" }
# bevy_asset = { path = "../bevy_asset", version = "0.12.0-dev" }
# bevy_core = { path = "../bevy_core", version = "0.12.0-dev" }
# bevy_derive = { path = "../bevy_derive", version = "0.12.0-dev" }
# bevy_ecs = { path = "../bevy_ecs", version = "0.12.0-dev" }
# bevy_reflect = { path = "../bevy_reflect", version = "0.12.0-dev" }
bevy_render = { path = "../bevy_render", version = "0.12.0-dev" }
# bevy_transform = { path = "../bevy_transform", version = "0.12.0-dev" }
# bevy_math = { path = "../bevy_math", version = "0.12.0-dev" }
# bevy_utils = { path = "../bevy_utils", version = "0.12.0-dev" }

ash = "0.37"
# serde = { version = "1", features = ["derive"] }
# bitflags = "2.3"
# radsort = "0.1"

[build-dependencies]
bindgen = "0.66"
